k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockvote-backend-service
spec:
  selector:
    app: blockvote-backend
  ports:
    - port: 80
      targetPort: 5000
