k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockvote-frontend-service
spec:
  selector:
    app: blockvote-frontend
  ports:
    - port: 80
      targetPort: 80
